force-app/main/default/objects/Tax__c/fields/Basic_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Basic_Percentage__c</fullName>
    <label>Basic Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>