force-app/main/default/objects/Tax__c/fields/SGST__c.field-meta.xml
<CustomField>
    <fullName>SGST__c</fullName>
    <defaultValue>0</defaultValue>
    <label>SGST</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>