force-app/main/default/objects/Tax__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tax_Percentage__c</columns>
    <columns>CGST__c</columns>
    <columns>SGST__c</columns>
    <columns>IGST__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>